Bug 46422 - [4.6 Regression] FAIL: g++.dg/other/i386-?.C
Summary: [4.6 Regression] FAIL: g++.dg/other/i386-?.C
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: testsuite (show other bugs)
Version: 4.6.0
: P1 normal
Target Milestone: 4.6.0
Assignee: Quentin Neill
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-11 02:02 UTC by H.J. Lu
Modified: 2010-11-18 00:11 UTC (History)
3 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2010-11-12 16:52:17


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2010-11-11 02:02:17 UTC
On Linux/x86, revision 166562 gave:

/export/gnu/import/rrs/166562/bld/gcc/testsuite/g++/../../include/bmiintrin.h: In function 'short unsigned int __lzcnt_u16(short unsigned int)':^M
/export/gnu/import/rrs/166562/bld/gcc/testsuite/g++/../../include/bmiintrin.h:38:39: error: '__builtin_ia32_lzcnt_u16' was not declared in this scope^M
/export/gnu/import/rrs/166562/bld/gcc/testsuite/g++/../../include/bmiintrin.h: In function 'unsigned int __lzcnt_u32(unsigned int)':^M
/export/gnu/import/rrs/166562/bld/gcc/testsuite/g++/../../include/bmiintrin.h:85:39: error: '__builtin_ia32_lzcnt_u32' was not declared in this scope^M

FAIL: g++.dg/other/i386-2.C (test for excess errors)

/export/gnu/import/rrs/166562/bld/gcc/testsuite/g++/../../include/bmiintrin.h: In function 'short unsigned int __lzcnt_u16(short unsigned int)':^M
/export/gnu/import/rrs/166562/bld/gcc/testsuite/g++/../../include/bmiintrin.h:38:39: error: '__builtin_ia32_lzcnt_u16' was not declared in this scope^M
/export/gnu/import/rrs/166562/bld/gcc/testsuite/g++/../../include/bmiintrin.h: In function 'unsigned int __lzcnt_u32(unsigned int)':^M
/export/gnu/import/rrs/166562/bld/gcc/testsuite/g++/../../include/bmiintrin.h:85:39: error: '__builtin_ia32_lzcnt_u32' was not declared in this scope^M

FAIL: g++.dg/other/i386-3.C (test for excess errors)
Comment 1 H.J. Lu 2010-11-11 02:05:55 UTC
It is caused by revision 166561:

http://gcc.gnu.org/ml/gcc-cvs/2010-11/msg00450.html
Comment 2 Quentin Neill 2010-11-16 22:12:08 UTC
Fix is posted at http://gcc.gnu.org/ml/gcc-patches/2010-11/msg01597.html
Comment 3 H.J. Lu 2010-11-16 22:53:49 UTC
(In reply to comment #2)
> Fix is posted at http://gcc.gnu.org/ml/gcc-patches/2010-11/msg01597.html

It has been approved:

http://gcc.gnu.org/ml/gcc-patches/2010-11/msg01610.html
Comment 4 Sebastian Pop 2010-11-18 00:10:41 UTC
Author: spop
Date: Thu Nov 18 00:10:35 2010
New Revision: 166889

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=166889
Log:
Fix PR target/46422.

2010-11-17  Quentin Neill  <quentin.neill.gnu@gmail.com>

	PR target/46422
	* config/i386/bmiintrin.h (__lzcnt_u16, __lzcnt_u32, __lzcnt_u64):
	Call the clz builtin.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/config/i386/bmiintrin.h
Comment 5 Sebastian Pop 2010-11-18 00:11:58 UTC
Fixed.