Fix PR target/46422.

2010-11-17  Quentin Neill  <quentin.neill.gnu@gmail.com>

	PR target/46422
	* config/i386/bmiintrin.h (__lzcnt_u16, __lzcnt_u32, __lzcnt_u64):
	Call the clz builtin.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@166889 138bc75d-0d04-0410-961f-82ee72b054a4