gcc/config/i386/bmiintrin.h
@@ -35,13 +35,13 @@
 extern __inline unsigned short __attribute__((__gnu_inline__, __always_inline__, __artificial__))
 __lzcnt_u16 (unsigned short __X)
 {
-  return __builtin_ia32_lzcnt_u16 (__X);
+  return __builtin_clzs (__X);
 }
 
 extern __inline unsigned short __attribute__((__gnu_inline__, __always_inline__, __artificial__))
 __tzcnt_u16 (unsigned short __X)
 {
-  return __builtin_ctzs(__X);
+  return __builtin_ctzs (__X);
 }
 
 
@@ -82,14 +82,14 @@ __blsr_u32 (unsigned int __X)
 extern __inline unsigned int __attribute__((__gnu_inline__, __always_inline__, __artificial__))
 __lzcnt_u32 (unsigned int __X)
 {
-  return __builtin_ia32_lzcnt_u32 (__X);
+  return __builtin_clz (__X);
 }
 
 
 extern __inline unsigned int __attribute__((__gnu_inline__, __always_inline__, __artificial__))
 __tzcnt_u32 (unsigned int __X)
 {
-  return __builtin_ctz(__X);
+  return __builtin_ctz (__X);
 }
 
 
@@ -131,13 +131,13 @@ __blsr_u64 (unsigned long long __X)
 extern __inline unsigned long long __attribute__((__gnu_inline__, __always_inline__, __artificial__))
 __lzcnt_u64 (unsigned long long __X)
 {
-  return __builtin_ia32_lzcnt_u64 (__X);
+  return __builtin_clzll (__X);
 }
 
 extern __inline unsigned long long __attribute__((__gnu_inline__, __always_inline__, __artificial__))
 __tzcnt_u64 (unsigned long long __X)
 {
-  return __builtin_ctzll(__X);
+  return __builtin_ctzll (__X);
 }
 
 #endif /* __x86_64__  */
